kubernetes-monitoring/4_deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-server-deployment
  namespace: prometheus
  labels: 
    app: nginx
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      serviceAccountName: monitoring-service-account
      containers:
      - name: nginx
        image: nginx:1.19.0
        volumeMounts:
        - name: shared-volume
          mountPath: /homework
        - name: nginx-conf
          mountPath: /etc/nginx/conf.d/
        resources:
          limits:
            cpu: "333m"
            memory: "200Mi"
        ports:
          - containerPort: 8000
        lifecycle:
          preStop:
            exec:
              command: ["sh", "-c", "rm -f /homework/index.html"]
        readinessProbe:
          exec:
            command:
            - sh
            - -c
            - test -f /homework/index.html
          initialDelaySeconds: 5
          periodSeconds: 5
      volumes:
      - name: nginx-conf
        configMap:
          name: nginx-conf
      - name: shared-volume
        emptyDir: {}
      nodeSelector:
        homework: "true" 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-prometheus-exporter-deployment
  namespace: prometheus
  labels: 
    app: nginx-pe
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: nginx-pe
  template:
    metadata:
      labels:
        app: nginx-pe
    spec:
      serviceAccountName: monitoring-service-account
      containers:
      - name: nginx-prometheus-exporter
        image: nginx/nginx-prometheus-exporter:1.1.0
        args:
        - "--nginx.scrape-uri=http://homework.otus/basic_status"
