kubernetes-monitoring/4_services.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-server-service
  namespace: prometheus
  annotations:
    prometheus.io/scrape: 'true'
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-prometheus-exporter-monitor-service
  namespace: prometheus
  annotations:
    prometheus.io/scrape: 'true'
  labels: 
    app: nginx-pe
spec:
  selector:
    app: nginx-pe
  ports:
    - protocol: TCP
      port: 9113
      targetPort: 9113
      name: "metrics"
  type: ClusterIP
