kubernetes-monitoring/5_services.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-server-service
  namespace: prometheus
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-prometheus-exporter-monitor-service
  namespace: prometheus
spec:
  selector:
    app: nginx-pe
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9113
  type: ClusterIP
