kubernetes-monitoring/5_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: prometheus
  annotations: 
spec:
  rules:
    - host: monitoring.homework
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: my-kube-prometheus-prometheus
                #name: my-prometheus-server
                port:
                  number: 9090

    - host: homework.otus
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: web-server-service
                port:
                  number: 80
